ROS2/log/build_2024-05-01_12-20-52/ctrl_relayer/stderr.log
  File "/home/ccl/UAV/ROS2/install/ctrl_relayer/lib/python3.8/site-packages/ctrl_relayer/cmd_subscriber.py", line 21
    <<<<<<< HEAD:ROS2/build/ctrl_relayer/build/lib/ctrl_relayer/cmd_subscriber.py
    ^
SyntaxError: invalid syntax

